# kdebluetooth4

./: AUTHORS  CMakeLists.txt  ChangeLog  TODO  kdebluetooth4-0.3.tar.bz2.delta  kdebluetooth4-0.3.tar.bz2.id  kdebluetooth_0.4.1.orig.tar.gz.delta  kdebluetooth_0.4.1.orig.tar.gz.id  kdebluetooth_0.4.2.orig.tar.gz.delta  kdebluetooth_0.4.2.orig.tar.gz.id  kdebluetooth_0.4~rc1.orig.tar.gz.delta  kdebluetooth_0.4~rc1.orig.tar.gz.id
debian/: changelog  control  copyright  kblueplugd  kdebluetooth.install  rules  watch
debian/patches/: kubuntu_01_document_path.diff  kubuntu_01_save_to_home.diff  kubuntu_02_autostart.diff  series
po/: CMakeLists.txt
po/cs/: kbluetooth.po
po/da/: kbluetooth.po
po/de/: kbluetooth.po
po/en_GB/: kbluetooth.po
po/eo/: kbluetooth.po
po/es/: kbluetooth.po
po/et/: kbluetooth.po
po/fr/: kbluetooth.po
po/ga/: kbluetooth.po
po/gl/: kbluetooth.po
po/it/: kbluetooth.po
po/km/: kbluetooth.po
po/lt/: kbluetooth.po
po/nds/: kbluetooth.po
po/nl/: kbluetooth.po
po/pa/: kbluetooth.po
po/pt/: kbluetooth.po
po/pt_BR/: kbluetooth.po
po/ro/: kbluetooth.po
po/ru/: kbluetooth.po
po/sv/: kbluetooth.po
po/tr/: kbluetooth.po
po/uk/: kbluetooth.po
po/zh_CN/: kbluetooth.po
po/zh_TW/: kbluetooth.po
src/: CMakeLists.txt  Messages.sh  adapterConf.ui  adapterWidget.ui  adapterconfig.cpp  adapterconfig.h  adapterwidget.cpp  adapterwidget.h  authagent.cpp  authagent.h  kbluelock.cpp  kbluelock.h  kbluetooth.desktop  kdebluetooth4.desktop  main.cpp  passkeyagent.cpp  passkeyagent.h  receiveDialogWidget.ui  trayicon.cpp  trayicon.h
src/agent/: CMakeLists.txt  agent.cpp  agent.h  authdialog.cpp  authdialog.h  authdialog.ui  confirmdialog.cpp  confirmdialog.h  confirmdialog.ui  main.cpp  passkeydialog.cpp  passkeydialog.h  passkeydialog.ui
src/device-manager/: CMakeLists.txt  deviceman.ui  devicemanager.cpp  devicemanager.h  main.cpp
src/deviceselector/: devicesel.cpp  devicesel.h  deviceselector.ui
src/inputwizard/: CMakeLists.txt  main.cpp  wizarddialog.cpp  wizarddialog.h  wizardpage.cpp  wizardpage.h
src/kioslave/bluetooth/: bluetoothslave.protocol
src/obexserver/: obexserver.cpp  obexserver.h  obexserversession.cpp  obexserversession.h  obexserversessionfiletransfer.cpp  obexserversessionfiletransfer.h
src/obexsession/: obexsession.cpp  obexsession.h  obexsessionfiletransfer.cpp  obexsessionfiletransfer.h
